<resources>
    <string name="action_settings">Settings</string>
    <string name="action_add">New chat</string>
    <string name="action_accounts">Manage accounts</string>
    <string name="action_account">Manage account</string>
    <string name="action_end_conversation">Close Chat</string>
    <string name="action_leave_group">Leave Group</string>
    <string name="action_contact_details">Contact Details</string>
    <string name="action_muc_details">Group Details</string>
    <string name="channel_details">Group Details</string>
    <string name="action_secure">Secure chat</string>
    <string name="action_add_account">Add account</string>
    <string name="action_edit_contact">Edit name</string>
    <string name="action_add_phone_book">Add to phone book</string>
    <string name="action_delete_contact">Delete Contact</string>
    <string name="action_block_contact">Block contact</string>
    <string name="action_unblock_contact">Unblock contact</string>
    <string name="action_block_domain">Block domain</string>
    <string name="action_unblock_domain">Unblock domain</string>
    <string name="title_activity_manage_accounts">Manage Accounts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_glaciervpn">Core Connection</string>
    <string name="title_activity_conference_details">Group Details</string>
    <string name="title_activity_contact_details">Contact Details</string>
    <string name="title_activity_sharewith">Share with Glacier</string>
    <string name="title_activity_start_conversation">Contacts</string>
    <string name="content_description_add_contact">Add to contacts</string>
    <string name="content_description_call">Call</string>
    <string name="content_description_backspace">Backspace</string>
    <string name="address_bar_hint"></string>
    <string name="dial_pad">Dial Pad</string>
    <string name="title_activity_choose_contact">Choose contact</string>
    <string name="title_activity_permissions_wizard">Permissions Wizard</string>
    <string name="title_activity_choose_contacts">Choose contacts</string>
    <string name="title_activity_share_via_account">Share via account</string>
    <string name="title_activity_block_list">Block list</string>
    <string name="offline">Offline</string>
    <string name="offline_statusBar">Disconnected: tap to connect</string>
    <string name="refreshing_status">Changing status to Available</string>
    <string name="refreshing_connection">Attempting to Connect</string>
    <string name="refreshing">Attempting to refresh</string>
    <string name="incoming_call">Incoming call...</string>
    <string name="outgoing_call">Ringing...</string>
    <string name="reject_call">Reject</string>
    <string name="end_call">End</string>
    <string name="accept_call">Accept</string>
    <string name="select_device">Select device</string>
    <string name="call_nolonger_exisits">Missed call: call no longer active.</string>
    <string name="no_core_status_to_display">The Core Connection feature requires that Glacier Core be installed on your device. Click the button below to go to the Play Store and install Glacier Core.</string>
    <string name="refreshing_network">Checking for signal</string>
    <string name="profile_picture">Profile picture</string>
    <string name="just_now">just now</string>
    <string name="minute_ago">1 min ago</string>
    <string name="minutes_ago">%d mins ago</string>
    <string name="unread_conversations">unread chat</string>
    <string name="sending">sending…</string>
    <string name="message_decrypting">Decrypting message. Please wait…</string>
    <string name="pgp_message">OpenPGP encrypted message</string>
    <string name="nick_in_use">Nickname is already in use</string>
    <string name="invalid_muc_nick">Invalid nickname</string>
    <string name="admin">Admin</string>
    <string name="owner">Owner</string>
    <string name="moderator">Moderator</string>
    <string name="participant">Participant</string>
    <string name="visitor">Visitor</string>
    <string name="remove_contact_text">Would you like to remove %s from your contacts? The chat associated with this contact will not be removed.</string>
    <string name="block_contact_text">Would you like to block %s from sending you messages?</string>
    <string name="unblock_contact_text">Would you like to unblock %s and allow them to send you messages?</string>
    <string name="block_domain_text">Block all contacts from %s?</string>
    <string name="unblock_domain_text">Unblock all contacts from %s?</string>
    <string name="contact_blocked">Contact blocked</string>
    <string name="blocked">Blocked</string>
    <string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The chat associated with this bookmark will not be removed.</string>
    <string name="register_account">Register new account on server</string>
    <string name="change_password_on_server">Change password on server</string>
    <string name="share_with">Share with…</string>
    <string name="start_conversation">Start chat</string>
    <string name="invite_contact">Add someone</string>
    <string name="change_status">Set a status</string>
    <string name="edit_status">Edit status</string>
    <string name="invite">Invite</string>
    <string name="contacts">Contacts</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="call">Call</string>
    <string name="DISCARD">DISCARD</string>
    <string name="DISAGREE">DISAGREE</string>
    <string name="AGREE">AGREE</string>
    <string name="OK">OK</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="SETTING">SETTING</string>
    <string name="CANCEL">CANCEL</string>
    <string name="CLOSE">CLOSE</string>
    <string name="UPDATE">UPDATE</string>
    <string name="DISMISS">DISMISS</string>
    <string name="HIDE">HIDE</string>
    <string name="RETRY">RETRY</string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="NOT_NOW">NOT NOW</string>
    <string name="DETAILS">DETAILS</string>
    <string name="FAILED">FAILED</string>
    <string name="TYPE_SEARCH">SEARCH</string>
    <string name="NO_IMAGE">NO IMAGE</string>
    <string name="DELETE">DELETE</string>
    <string name="NEXT">NEXT</string>
    <string name="OPEN">OPEN</string>
    <string name="SAVE">SAVE</string>
    <string name="set">Set</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="CONTINUE">CONTINUE</string>
    <string name="permission_need_req">Glacier needs access to your microphone, camera, and media in order to connect and make secure calls.</string>
    <string name="crash_report_title">Glacier Crash</string>
    <string name="crash_report_message">Glacier has crashed!  Please notify Glacier Security immediately if problem persists.</string>
    <string name="send_now">Send now</string>
    <string name="send_never">Never ask again</string>
    <string name="problem_connecting_to_account">Unable to connect to Glacier</string>
    <string name="problem_connecting_to_accounts">Unable to connect to multiple accounts</string>
    <string name="touch_to_fix">Touch here to manage your accounts</string>
    <string name="attach_file">Attach file</string>
    <string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
    <string name="add_contact">Add contact</string>
    <string name="send_failed">delivery failed</string>
    <string name="preparing_image">Preparing image for transmission</string>
    <string name="preparing_images">Preparing images for transmission</string>
    <string name="sharing_files_please_wait">Sharing files. Please wait…</string>
    <string name="action_clear_history">Clear history</string>
    <string name="clear_conversation_history">Clear Conversation History</string>
    <string name="clear_histor_msg">Do you want to delete all messages within this Conversation?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
    <string name="delete_messages">Delete messages</string>
    <string name="delete_file_dialog">Delete file</string>
    <string name="delete_file_dialog_msg">Are you sure you want to delete this file?\n\n<b>Warning:</b> This will not delete copies of this file that are stored on other devices or servers. </string>
    <string name="also_end_conversation">Close this chat afterwards</string>
    <string name="choose_presence">Choose device</string>
    <string name="send_unencrypted_message">Send unencrypted message</string>
    <string name="send_message">Send message</string>
    <string name="send_message_to_x">Send message to %s</string>
    <string name="send_glacier_message">Send encrypted message</string>
    <string name="send_glacier_x509_message">Send v\\Glacier encrypted message</string>
    <string name="send_pgp_message">Send OpenPGP encrypted message</string>
    <string name="your_nick_has_been_changed">Your nickname has been changed</string>
    <string name="send_unencrypted">Send unencrypted</string>
    <string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
    <string name="openkeychain_required">OpenKeychain</string>
    <string name="openkeychain_required_long">Glacier utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Glacier afterwards.)</small></string>
    <string name="restart">Restart</string>
    <string name="install">Install</string>
    <string name="openkeychain_not_installed">Please install OpenKeychain</string>
    <string name="offering">offering…</string>
    <string name="waiting">waiting…</string>
    <string name="no_pgp_key">No OpenPGP Key found</string>
    <string name="search">Search</string>
    <string name="join_conference">Create Group</string>
    <string name="invite_only_desc">Invite only groups have a 20 user recommended limit and are managed by the owner</string>
    <string name="open_group_desc">Open groups have no user limit and store group chat history</string>
    <string name="invite_only">Invite Only</string>
    <string name="connect">Connect</string>
    <string name="enable_all_accounts">Enable all accounts</string>
    <string name="disable_all_accounts">Disable all accounts</string>
    <string name="hide_offline">Hide offline</string>
    <string name="action_add_account_with_certificate">Add account with certificate</string>
    <string name="create_dialog_group_chat_name">Group chat name</string>
    <string name="core_connection_import_profile">Import Core Profiles</string>
    <string name="action_enablepin">Enable PIN</string>
    <string name="action_changepin">Change PIN</string>
    <string name="connectionStatusTitle">Connection Status</string>
    <string name="no_status_yet">No Status yet</string>
    <string name="currentProfileTitle">Current Profile</string>
    <string name="no_profile_yet">No Profile yet</string>
    <string name="profileSelectionTitle">Profile Selection</string>
    <string name="disconnect">Disconnect</string>
    <string name="action_glaciervpn">Core Connection</string>
    <string name="action_filesafe">FileSafe</string>
    <string name="content_description_back_call">Back to call</string>
    <string name="content_description_transfer">Transfer</string>
    <string name="content_description_add_call">Add call</string>
</resources>