<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="?attr/icon_search"
        android:title="@string/search"
        app:actionLayout="@layout/actionview_search"
        android:orderInCategory="75"
        app:showAsAction="collapseActionView|always"/>
    <item
        android:id="@+id/action_join_conference"
        android:title="@string/join_conference"
        android:orderInCategory="80"
        app:showAsAction="never"/>

    //HONEYBADGER AM-120 Remove the top right barcode scanning feature
    <!--<item-->
        <!--android:id="@+id/action_scan_qr_code"-->
        <!--android:title="@string/scan_qr_code"-->
        <!--android:icon="?attr/icon_scan_qr_code"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_hide_offline"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="85"
        android:title="@string/hide_offline"
        app:showAsAction="never"/>
    <!-- ALF AM-277 -->
    <item
        android:id="@+id/action_filesafe"
        android:orderInCategory="89"
        android:title="@string/action_filesafe"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_accounts"
        android:orderInCategory="90"
        android:title="@string/action_accounts"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_account"
        android:orderInCategory="90"
        android:title="@string/action_account"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_glaciervpn"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:title="@string/action_glaciervpn"/>
</menu>