<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
    >

    <RelativeLayout
        android:id="@+id/address_bar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:id="@+id/erase"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/content_description_backspace"
            android:focusableInTouchMode="true"
            android:src="@drawable/ic_baseline_backspace_24" />

        <EditText
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/erase"
            android:backgroundTint="@color/primary_bg_color"
            android:ellipsize="start"
            android:hint="@string/address_bar_hint"
            android:inputType="number"
            android:paddingLeft="20dp"
            android:paddingRight="5dp"
            android:textColorHint="?attr/edit_text_color" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:paddingBottom="1dp"
            android:layout_alignParentBottom="true"

        />

    </RelativeLayout>

    <include
        android:id="@+id/numpad"
        layout="@layout/numpad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/address_bar"
        android:layout_centerInParent="true"
        android:padding="10dp" />

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/content_description_add_contact"
                android:padding="15dp"
                android:src="@drawable/ic_baseline_person_add" />

            <ImageView
                android:id="@+id/back_to_call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:contentDescription="@string/content_description_back_call"
                android:padding="15dp"
                android:visibility="gone"
                android:src="@drawable/ic_baseline_phone_callback_24" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/start_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/call"
            android:contentDescription="@string/content_description_call"
            android:padding="12dp"
            android:src="@drawable/ic_baseline_phone_in_talk_24" />

        <ImageButton
            android:id="@+id/add_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/call"
            android:contentDescription="@string/content_description_add_call"
            android:padding="12dp"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_add_ic_call_24" />

        <ImageButton
            android:id="@+id/transfer_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/call"
            android:contentDescription="@string/content_description_transfer"
            android:padding="12dp"
            android:visibility="gone"
            android:src="@drawable/ic_baseline_phone_forwarded_24" />

    </LinearLayout>

</RelativeLayout>
