<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="?attr/dialog_vertical_padding"
        android:paddingLeft="?attr/dialog_horizontal_padding"
        android:paddingRight="?attr/dialog_horizontal_padding"
        android:paddingTop="?attr/dialog_vertical_padding">

        <!-- ALF AM-78
        <TextView
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_account"/>

        <Spinner
            android:id="@+id/account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/> -->

        <!-- AM-88 next 4 -->
        <TextView
            android:id="@+id/invite_only_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/invite_only_desc"
            android:textSize="?attr/TextSizeBody" />

        <TextView
            android:id="@+id/open_group_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/open_group_desc"
            android:textSize="?attr/TextSizeBody" />

        <CheckBox
            android:id="@+id/invite_only"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="@string/invite_only"
            android:textSize="?attr/TextSizeBody"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/TextAppearance.Conversations.Design.Error"
            app:hintTextAppearance="@style/TextAppearance.Conversations.Design.Hint">
            <!-- ALF AM-88 in old version and join this is jid instead of group_chat_name is this an issue? -->
            <com.glaciersecurity.glaciermessenger.ui.widget.EmojiWrapperEditText
                android:id="@+id/group_chat_name"
                style="@style/Widget.Conversations.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_dialog_group_chat_name"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</layout>
