<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/color_background_secondary">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                        <include
                            android:id="@+id/toolbar"
                            layout="@layout/toolbar"/>
                        <LinearLayout
                            android:id="@+id/offline_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="4dp"
                            android:background="#27a1cb"
                            android:visibility="gone">

                                <TextView
                                    android:id="@+id/network_status"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:drawableLeft="@drawable/ic_refresh_black_24dp"
                                    android:drawableStart="@drawable/ic_refresh_black_24dp"
                                    android:drawablePadding="8dp"
                                    android:textSize="16sp"
                                    android:text="@string/offline_statusBar"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:padding="@dimen/card_padding_regular">


                                <TextView
                                    android:id="@+id/connectionStatusTitle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentTop="true"
                                    android:text="@string/connectionStatusTitle"
                                    android:textSize="25dp" />

                                <TextView
                                    android:id="@+id/status"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/connectionStatusTitle"
                                    android:layout_alignParentLeft="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/no_status_yet" />

                                <TextView
                                    android:id="@+id/currentProfileTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/status"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="43dp"
                                    android:text="@string/currentProfileTitle"
                                    android:textSize="25dp" />

                                <TextView
                                    android:id="@+id/currentProfile"
                                    android:layout_width="fill_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/currentProfileTitle"
                                    android:layout_alignParentLeft="true"
                                    android:layout_centerVertical="true"
                                    android:text="@string/no_profile_yet" />

                                <TextView
                                    android:id="@+id/profileSelectionTitle"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/currentProfile"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_marginTop="43dp"
                                    android:text="@string/profileSelectionTitle"
                                    android:textSize="25dp" />

                                <Spinner
                                    android:id="@+id/profileSpinner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/profileSelectionTitle"
                                    android:layout_alignParentStart="true"
                                    android:layout_alignParentLeft="true" />

                                <Button
                                    android:id="@+id/addNewProfile"
                                    style="?android:attr/buttonStyleSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@+id/profileSpinner"
                                    android:layout_alignLeft="@+id/connectionStatusTitle"
                                    android:layout_marginLeft="1dp"
                                    android:layout_marginTop="38dp"
                                    android:layout_gravity="center"

                                    android:text="@string/core_connection_import_profile" />

                                <!-- <Button
                            android:id="@+id/getMyIP"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_below="@+id/startVPN"
                            android:text="@string/show_my_ip" /> -->
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:padding="@dimen/card_padding_regular"
                                    android:layout_gravity="center">


                                        <Button
                                            android:id="@+id/startVPN"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_alignTop="@+id/disconnect"
                                            android:text="@string/connect"
                                            android:visibility="visible"
                                            android:padding="@dimen/card_padding_regular"
                                            />

                                        <Button
                                            android:id="@+id/disconnect"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_below="@+id/profileSpinner"
                                            android:padding="@dimen/card_padding_regular"

                                            android:text="@string/disconnect" />
                                </LinearLayout>
                        </LinearLayout>
                </LinearLayout>

                <!-- GOOBER CORE - remove emergency profile
                <CheckBox
                    android:id="@+id/enable_emergconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/enable_emergconnect"
                    android:textColor="@color/black87"
                    android:layout_below="@+id/startVPN"
                    android:textSize="20dp"/> -->
        </RelativeLayout>
</layout>